somehow the notebook didn't get committed

--- a/bot_runner.ipynb
+++ b/bot_runner.ipynb
@@ -65,7 +65,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "6c3e0c8c-f5e0-461d-a1da-7480bcecdb58",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -935,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "aedbf0f2-f27b-42da-bb2f-dfa378d76c00",
    "metadata": {},
    "outputs": [],
@@ -957,21 +959,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "818869c3-6f10-4f3a-873d-fa7b4ca2740e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'response': {'able defend': 4.860729711040595,\n",
-       "  'able help': 4.860729711040595,\n",
-       "  'able home': 4.860729711040595,\n",
-       "  'able make': 4.860729711040595,\n",
-       "  'able offer': 4.860729711040595}}"
+       "{'response': {'app': 3.164963715117998,\n",
+       "  'app fingers': 3.164963715117998,\n",
+       "  'appreciate': 3.164963715117998,\n",
+       "  'appreciate grandson': 3.164963715117998,\n",
+       "  'aren': 3.164963715117998}}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
